--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/profile_image"
         android:layout_width="171dp"
         android:layout_height="145dp"
-        android:src="@mipmap/ic_launcher_3"
+        android:src="@mipmap/ic_launcher_3_darker"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintBottom_toTopOf="@+id/uploadBtn"
@@ -26,7 +26,7 @@
         android:layout_marginTop="404dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Upload CSV"
-
+        android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -41,6 +41,7 @@
         android:layout_marginTop="68dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Solutions"
+        android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
