Working on Popup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="404dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Upload CSV"
+        android:text="Get Solution"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Solutions"
+        android:text="Previous Solutions"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintBottom_toBottomOf="parent"
