--- a/app/src/main/res/layout/activity_solution_view.xml
+++ b/app/src/main/res/layout/activity_solution_view.xml
@@ -11,7 +11,7 @@
         android:id="@+id/nextSegmentBtn"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="88dp"
         android:layout_marginBottom="156dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Next"
@@ -25,7 +25,7 @@
         android:id="@+id/prevSegmentBtn"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="88dp"
         android:layout_marginBottom="156dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Previous"
@@ -59,5 +59,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_3_darker_round" />
+
+    <TextView
+        android:id="@+id/segmentNumTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle_text"
+        android:text="Segment 1 Of 8"
+        android:textColor="@color/appBlack"
+        app:layout_constraintBottom_toTopOf="@+id/solImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
