--- a/app/src/main/res/layout/dialog_solution_info_viewer.xml
+++ b/app/src/main/res/layout/dialog_solution_info_viewer.xml
@@ -7,38 +7,60 @@
     android:layout_gravity="center"
     android:background="@drawable/dialog_bg">
 
-    <TextView
-        android:id="@+id/solNameTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/appGreen"
-        android:text="Solution Name"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <Button
-        android:id="@+id/solutionInfoBtn"
-        android:layout_width="206dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_rectangle"
-        android:text="Solution Info"
-        android:textColor="@color/appBlack"
-        app:backgroundTint="@color/appGreen"
-        app:layout_constraintWidth_percent="0.5"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="76dp" />
 
     <Button
         android:id="@+id/rearrangeManuallyBtn"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_rectangle"
         android:text="Rearrange"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintWidth_percent="0.5"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="219dp" />
+        tools:layout_editor_absoluteX="3dp"
+        tools:layout_editor_absoluteY="118dp" />
+
+    <TextView
+        android:id="@+id/percentPackedTextView"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10px"
+        android:text="Percent Packed:"
+        android:textAlignment="center"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
+        android:padding="10px"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="90dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:background="@color/appBlack"
+        android:foregroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="55dp"
+        android:progress="25"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
