--- a/app/src/main/res/layout/dialog_solution_info_viewer.xml
+++ b/app/src/main/res/layout/dialog_solution_info_viewer.xml
@@ -8,59 +8,92 @@
     android:background="@drawable/dialog_bg">
 
 
-    <Button
-        android:id="@+id/rearrangeManuallyBtn"
-        android:layout_width="206dp"
-        android:layout_height="wrap_content"
-        android:text="Rearrange"
-        android:textColor="@color/appBlack"
-        app:backgroundTint="@color/appGreen"
-        app:layout_constraintWidth_percent="0.5"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="118dp" />
-
     <TextView
         android:id="@+id/percentPackedTextView"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_corner"
-        android:padding="10px"
+        android:padding="20px"
         android:text="Percent Packed:"
         android:textAlignment="center"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/unpackedBoxesTextView"
+        android:layout_width="206dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:background="@drawable/rounded_corner"
-        android:padding="10px"
-        android:text="TextView"
+        android:padding="20px"
+        android:text="Unpacked Boxes:"
         android:textAlignment="center"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="90dp" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-    <ProgressBar
-        android:id="@+id/progressBar3"
-        style="?android:attr/progressBarStyleHorizontal"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="54dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/percentPackedTextView">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:max="100"
+            android:progress="50"
+            android:progressDrawable="@drawable/rounded_progress_bar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/progressBarTextView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/progressBarTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="Test"
+            android:textColor="@color/appBlack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/unpackedBoxesNumberTextView"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
-        android:background="@color/appBlack"
-        android:foregroundTint="@color/appGreen"
+        android:layout_marginTop="16dp"
+        android:text="Test"
+        android:textAlignment="center"
+        android:textColor="@color/appGreen"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="55dp"
-        android:progress="25"/>
+        app:layout_constraintTop_toBottomOf="@+id/unpackedBoxesTextView"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
