--- a/app/src/main/res/layout/activity_greet.xml
+++ b/app/src/main/res/layout/activity_greet.xml
@@ -14,18 +14,18 @@
         android:src="@mipmap/ic_launcher_3_darker"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/uploadBtn"
+        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/uploadBtn"
+        android:id="@+id/loginBtn"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="404dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Get Solution"
+        android:text="Login"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,19 +35,19 @@
         app:layout_constraintWidth_percent="0.5" />
 
     <Button
-        android:id="@+id/prevSolsBtn"
+        android:id="@+id/registerBtn"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Previous Solutions"
+        android:text="Register"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uploadBtn"
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.5" />
 
