--- a/app/src/main/res/layout/dialog_move_box.xml
+++ b/app/src/main/res/layout/dialog_move_box.xml
@@ -11,12 +11,16 @@
         android:id="@+id/enterBoxNumEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_corner"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/appGreen"
         android:ems="10"
         android:hint=" *Box Number"
         android:inputType="numberSigned"
         android:textAlignment="center"
+        android:textColor="@color/appGreen"
+        android:textColorHint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,12 +29,16 @@
         android:id="@+id/enterSegmentNumEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_corner"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/appGreen"
         android:ems="10"
         android:hint=" *Segment"
         android:inputType="numberSigned"
         android:textAlignment="center"
+        android:textColor="@color/appGreen"
+        android:textColorHint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterBoxNumEditText" />
@@ -40,12 +48,16 @@
         android:id="@+id/enterHorizontalPosEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_corner"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/appGreen"
         android:ems="10"
         android:hint=" *Horizontal Position"
         android:inputType="numberSigned"
         android:textAlignment="center"
+        android:textColor="@color/appGreen"
+        android:textColorHint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterSegmentNumEditText" />
@@ -55,7 +67,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_corner"
+        android:backgroundTint="@color/appGreen"
+        android:textColor="@color/appGreen"
+        android:textColorHint="@color/appGreen"
         android:ems="10"
         android:hint=" *Vertical Position"
         android:inputType="numberSigned"
