--- a/app/src/main/res/layout/activity_solution_view.xml
+++ b/app/src/main/res/layout/activity_solution_view.xml
@@ -36,10 +36,25 @@
         app:layout_constraintWidth_percent="0.5" />
 
     <Button
+        android:id="@+id/correctionBtn"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Make Corrections"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintBottom_toTopOf="@+id/optionsBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <Button
         android:id="@+id/optionsBtn"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Options"
         android:textColor="@color/appBlack"
