--- a/app/src/main/res/layout/dialog_solution_corrections.xml
+++ b/app/src/main/res/layout/dialog_solution_corrections.xml
@@ -8,14 +8,14 @@
     android:background="@drawable/dialog_bg">
 
     <Button
-        android:id="@+id/saveSolutionBtn"
+        android:id="@+id/moveBoxBt"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Save Solution"
+        android:text="Pin Box"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/solutionInfoBtn"
+        android:id="@+id/freeBoxBtn"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Unpin Box"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/moveBoxBt"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <Button
+        android:id="@+id/addBoxBtn"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Add Box"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/freeBoxBtn"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <Button
+        android:id="@+id/removeBoxBtn"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -31,13 +63,12 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="Solution Info"
+        android:text="Remove Box"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveSolutionBtn"
+        app:layout_constraintTop_toBottomOf="@+id/addBoxBtn"
         app:layout_constraintWidth_percent="0.5" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
