--- a/app/src/main/res/layout/dialog_solution_viewer.xml
+++ b/app/src/main/res/layout/dialog_solution_viewer.xml
@@ -29,15 +29,31 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Solution Info"
+        android:textColor="@color/appBlack"
+        app:backgroundTint="@color/appGreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saveSolutionBtn"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <Button
+        android:id="@+id/boxInfoBtn"
+        android:layout_width="206dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Box Info"
         android:textColor="@color/appBlack"
         app:backgroundTint="@color/appGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveSolutionBtn"
+        app:layout_constraintTop_toBottomOf="@+id/solutionInfoBtn"
         app:layout_constraintWidth_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
