--- a/app/src/main/res/layout/dialog_view_box_selector.xml
+++ b/app/src/main/res/layout/dialog_view_box_selector.xml
@@ -30,9 +30,7 @@
         android:id="@+id/viewBoxNumOkBtn"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/appGreen"
@@ -40,9 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeBoxNumEditText" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/viewBoxNumEditText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
