--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -6,9 +6,11 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="409dp"
-        android:layout_height="50dp"
+        android:layout_width="350dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/appBlack"
         android:backgroundTint="@color/appBlack"
         app:layout_constraintBottom_toBottomOf="parent"
